# gameserver

./: .gitignore  app.wsgi  build.sh  build_dev.sh  build_prod.sh  connect4_generate.py  package-lock.json  pyproject.toml  robots.txt  run.py  sitemap.xml  start_app.sh
TicTacToe/: index.html
TicTacToe/static/: brython_modules.js  tictactoe.css
TicTacToe/tictactoe/: game.py  tictactoe_app.py
backend/: __main__.py  blueprint_constructor.py  core.py  games.py  generate.py  index.py  requirements.txt
backend/connect4/: __main__.py  config.xml  game.py  generate.py  udebs_config.py
backend/connect4/data/: data-4x4.pkl
backend/connection/: Connect4.py  TicTacToe.py  __init__.py  config.xml  core.py  data.py  generate.py  udebs_config.py
backend/connection/data/: Connect4-4x4.pkl  Connect4-5x4.pkl  Connect4-book-4x4.pkl  Connect4-book-5x4.pkl  Connect4-book-5x5.pkl  Connect4-book-6x5.pkl  tictactoe-3x3.pkl  tictactoe-4x4.pkl  tictactoe-book-3x3.pkl  tictactoe-book-4x4.pkl
feh_format/: index.html
frontend/: package-lock.json  package.json
frontend/public/: connect4.css  index.html
frontend/src/: config.js  index.js
life/: index.html
life/life/: app.py  game.py
life/static/: brython_modules.js  game.css
tictactoe/: index.html
tictactoe/static/: brython_modules.js
tictactoe/tictactoe/: game.py  opening_book.py  tictactoe_app.py
tournament/: asset-manifest.json  index.html  main.css  package-lock.json  package.json
tournament/src/: index.js
tournament_src/: LICENSE  package-lock.json  package.json
tournament_src/public/: index.html
(+13 files in other folders)
