[tool.poetry]
name = "gameserver"
version = "0.1.0"
description = ""
authors = ["Ryan Chartier <redrecrm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
brython = "^3.10.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
